brat/test/golden/kernel/let_del.brat.golden
Error in f (test/golden/kernel/let_del.brat)@FC {start = Pos {line = 4, col = 12}, end = Pos {line = 4, col = 33}}:
f = { q => let q' = X(q) in true }
           ^^^^^^^^^^^^^^^^^^^^^

  Type error: Variable(s) q' haven't been used

